# tapis-workflows

./: .gitignore  CHANGELOG.md  burndown  burnup  cli.py  configs.py  docker-compose.yml  tapis-project.json  test  test.py  tp  tp.py  wf
src/: configs.py  (+3 more)
src/engine/src/: .gitignore  CHANGELOG.md  Dockerfile  Server.py  main.py  pyproject.toml  requirements.txt  setup.py
src/engine/src/conf/: Configuration.py  constants.py  request.py
src/engine/src/core/: Server.py  WorkflowExecutor.py
src/engine/src/daos/: FileSystemDAO.py  WorkflowExecutorStateDAO.py  __init__.py
src/engine/src/errors/: __init__.py  archives.py  base.py  builder.py  context.py  credentials.py  tasks.py
src/engine/src/expressions/: ConditionalExpressionEvaluator.py  OperandResolver.py  __init__.py
src/engine/src/helpers/: ConditionalExpressionEvaluator.py  GitCacheService.py  GraphValidator.py  TemplateMapper.py  TemplateRepository.py  __init__.py  function_bootstrap.py
src/engine/src/ioc/: IOCContainer.py  IOCContainerFactory.py  __init__.py
src/engine/src/mappers/: ArgMapper.py  ArgValueFileMapper.py  EnvMapper.py  EnvVarValueFileMapper.py  TaskMapper.py  TaskOutputMapper.py  __init__.py
src/engine/src/owe_python_sdk/: NotificationMiddleware.py  Plugin.py  SchemaExtension.py  TaskExecutor.py  TaskOutputFile.py  TaskResult.py  client.py  constants.py  errors.py  schema.py  utils.py
src/engine/src/repositories/: ArgRepository.py  ArgValueFileRepository.py  EnvRepository.py  EnvVarValueFileRepository.py  TaskOutputRepository.py  TaskRepository.py  TemplateRepository.py  __init__.py
(+717 files in other folders)
