[tool.poetry]
name = "owe_python_sdk"
version = "0.0.1a11"
description = ""
authors = ["Nathan Freeman <nfreeman@tacc.utexas.edu.com>"]
repository = "https://github.com/tapis-project/tapis-workflows"

include = ["owe_python_sdk/*"]
exclude = ["owe_python_sdk/runtime"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
